# bookie-breaker-bookie-emulator

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  alembic.ini  pyproject.toml
.config/: mise.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_paper_bets_side_draw.py  0003_props_parlays.py
scripts/: export_openapi.py
src/bookie_emulator/: __init__.py  config.py  main.py  telemetry.py
src/bookie_emulator/api/: dependencies.py  envelope.py  errors.py  pagination.py  schemas.py
src/bookie_emulator/api/routes/: __init__.py  bankroll.py  bets.py  health.py  parlays.py  performance.py
src/bookie_emulator/clients/: __init__.py  base.py  lines.py  reconcile.py  statistics.py
src/bookie_emulator/core/: __init__.py  clv.py  grading.py  odds.py  parlay.py  performance.py  prop_grading.py  settlement.py
src/bookie_emulator/db/: __init__.py  engine.py  repository.py  tables.py
src/bookie_emulator/events/: __init__.py  publisher.py  subscriber.py
src/bookie_emulator/services/: __init__.py  bankroll.py  bets.py  grader.py  health.py  poller.py
tests/integration/: conftest.py  test_analytics_flow.py  test_bets_flow.py  test_grading_flow.py  test_live_bets_flow.py  test_parlay_flow.py  test_parlay_prop_leg_flow.py  test_prop_grading_flow.py  test_props_parlays_schema.py
tests/unit/: test_api_routes.py  test_app_factory.py  test_bankroll_service.py  test_bet_service.py  test_clv.py  test_db_engine.py  test_events_publisher.py  test_grader_props.py  test_grader_service.py  test_grading.py  test_health_service.py  test_live_bets.py  test_odds.py  test_pagination.py  test_parlay_prop_legs.py  test_parlays.py  test_performance.py  test_placeholder.py  test_poller.py  test_prop_grading.py  test_props_parlays_wave0.py  test_reconcile.py  test_service_clients.py  test_settlement.py  test_subscriber.py  test_telemetry.py
